<resources>
    <string name="app_name">Inventory App - Part 1</string>
    <string name="editor">Add Inventory Item</string>
    <string name="save">Save Item</string>
    <string name="edit">Edit Item</string>
    <string name="clear">Clear Form</string>
    <string name="delete">Delete Entry</string>
    <string name="empty">Database is empty. Tap "Add Inventory Item" to add an item to the inventory database."</string>
    <string name="action_save_item">Save Item to Inventory</string>
    <string name="action_edit_item">Edit Item in Inventory</string>
    <string name="add_a_new_item_to_the_inventory_database">Add a new item to the inventory database</string>
    <string name="product_name">Product Name</string>
    <string name="example_supersoaker_4000_model_456">Example: SuperSoaker 4000 (Model #456)</string>
    <string name="price_usd">Price (USD $)</string>
    <string name="_10_33">10.33</string>
    <string name="five">5</string>
    <string name="quantity">Quantity</string>
    <string name="enter_positive_whole_numbers_e_g_1_24_160">Enter Positive Whole Numbers (e.g. 1, 24, 160)</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="example_waterguns_inc">Example: Waterguns Inc.</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="use_form_xxx_xxx_xxxx">Use form xxx-xxx-xxxx</string>
    <string name="phone_sample">555-555-5555</string>
    <string name="supplier">Supplier</string>
    <string name="add_item">Add Item</string>
    <string name="contact_supplier">Call Supplier</string>
    <string name="quantity_in_stock">Quantity in Stock</string>
    <string name="price">Price</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sale">Sale</string>
    <string name="error_insert">Error with saving inventory item. Please retry.</string>
    <string name="error_quantity">Error with updating the inventory item quantity. Please retry.</string>
    <string name="insert">Inventory item successfully saved.</string>
    <string name="missing_input">Please complete all required fields in the inventory form.</string>
    <string name="valid_phone">A valid phone number is required. Use the form xxx-xxx-xxxx.</string>
    <string name="unsaved_changes_msg">You have unsaved changes. Do you want to quit editing and discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_changes">Keep Editing</string>
    <string name="delete_dialog_msg">Permanently delete this item from the inventory?</string>
    <string name="delete_all">Delete Entire Inventory</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_pet_failed">Unable to delete item from inventory.</string>
    <string name="editor_delete_pet_successful">Item permanently deleted from inventory.</string>
    <string name="unkown_supplier">Unknown Supplier</string>
    <string name="phone_unkown">Unknown</string>
    <string name="item_sold">Congrats! You sold an item from your inventory!</string>
    <string name="sold_out">Oops! You\'re sold out of that item.</string>
    <string name="no_supplier_phone">Unable to place call, there is no supplier\'s phone number available for this item.</string>


</resources>
