<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="top |center_horizontal"
    android:orientation="vertical"
    tools:context=".EditorActivity">


    <TextView
        android:id="@+id/product_name"
        style="@style/title_style"
        android:gravity="center_vertical|center_horizontal"
        tools:text="@string/example_supersoaker_4000_model_456" />

    <TextView
        style="@style/textbox_label_bold"
        android:text="@string/price_usd" />

    <TextView
        android:id="@+id/price"
        style="@style/textbox_label"
        tools:text="@string/_10_33" />

    <TextView
        style="@style/textbox_label_bold"
        android:text="@string/quantity"
        tools:text="@string/quantity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bright_button_big"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity"
            style="@style/textbox_label"
            tools:text="@string/five" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bright_button_big"
            android:text="@string/plus" />

    </LinearLayout>

    <TextView
        style="@style/textbox_label_bold"
        android:text="@string/supplier_name" />

    <TextView
        android:id="@+id/supplier_name"
        style="@style/textbox_label"
        tools:text="@string/example_waterguns_inc" />


    <TextView
        style="@style/textbox_label"
        android:text="@string/supplier_phone_number" />

    <TextView
        android:id="@+id/supplier_phone"
        style="@style/textbox_label"
        android:maxLength="13"
        tools:text="@string/phone_sample" />

    <Button
        android:id="@+id/call_supplier"
        style="@style/bright_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_supplier" />

</LinearLayout>