<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/product_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/list_item_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_list"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            style="@style/item_list_text"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price_list"
            style="@style/item_list_text" />

        <TextView
            android:id="@+id/textView4"
            style="@style/item_list_text"
            android:text="@string/quantity_in_stock" />

        <TextView
            android:id="@+id/quantity_list"
            style="@style/item_list_text"
            android:textSize="@dimen/medium_font" />

        <Button
            android:id="@+id/sale_button"
            style="@style/bright_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>